tests/tree/printf_2.stderr
error: expected 1 arguments for function printf, 2 were provided. line 5
c-- returned nonzero exit code