tests/tree/printf_2.c
extern void printf(char format[]);

void main(void)
{
  printf("this doesn't work: %d\n", 5);
}
